--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-plugins {
+ plugins {
 	id 'org.springframework.boot' version '2.1.6.RELEASE'
 	id 'java'
 }
@@ -23,6 +23,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.hibernate:hibernate-core:5.4.3.Final'
+	implementation 'org.hibernate:hibernate-entitymanager:5.4.3.Final'
 	compile 'io.springfox:springfox-swagger2:2.7.0'        
     compile 'io.springfox:springfox-swagger-ui:2.7.0'  
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
