--- a/build.gradle
+++ b/build.gradle
@@ -26,9 +26,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.hibernate:hibernate-core:5.4.3.Final'
 	implementation 'org.hibernate:hibernate-entitymanager:5.4.3.Final'
+	implementation 'com.h2database:h2'
 	compile 'io.springfox:springfox-swagger2:2.7.0'        
     compile 'io.springfox:springfox-swagger-ui:2.7.0'  
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
